updates to the css

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="/contents/Aayush.PNG" alt="Aayush Swami" loading="lazy">
+                    <img src="/contents/Aayushimage.jpeg" alt="Aayush Swami" loading="lazy">
                 </div>
                 <div class="about-text">
                     <h2>Full-Stack Developer & Research Enthusiast</h2>
